Add Species
Every Donor must have a Species, specified in registration.
The link between tissue and HMDMC is now nullable: it must exist
when the species is Human, and not exist when the species is anything
else.